--- a/themes/lanyon-hugo-theme/layouts/partials/sidebar.html
+++ b/themes/lanyon-hugo-theme/layouts/partials/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
    <div class="sidebar-item">
-    <p>{{ if .Site.Params.description }}{{ .Site.Params.description }}{{ else }}A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.{{ end }}</p>
+    <p>{{ if .Site.Params.description }}{{ .Site.Params.description }}{{ else }}Digital playground. <a href="https://twitter.com/edwardchoi" target="_blank">@edwardchoi</a>{{ end }}</p>
   </div>
 
   <nav class="sidebar-nav">
